--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     </div>
   </header>
   <div class="top-wrapper">
+ 
     <div class="container">
+      <div>
+        <img src="https://raw.githubusercontent.com/prog-8/prog-8.github.io/master/top.png">
+      </div>
       <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
       <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
       <div class="btn-wrapper">
