--- a/index.html
+++ b/index.html
@@ -1,94 +1,172 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Progate</title>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
-</head>
-<body>
-  <header>
-    <div class="container">
-      <div class="header-left">
-        <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
-      </div>
-      <span class="fa fa-bars menu-icon"></span>
-      <div class="header-right">
-        <a href="#">レッスン</a>
-        <a href="#">新規登録</a>
-        <a href="#" class="login">ログイン</a>
-      </div>
-    </div>
-  </header>
-  <div class="top-wrapper">
- 
-    <div class="container">
-      <div>
-        <img src="https://raw.githubusercontent.com/prog-8/prog-8.github.io/master/top.png">
-      </div>
-      <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
-      <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
-      <div class="btn-wrapper">
-        <a href="#" class="btn signup">新規登録はこちら</a>
-        <p>or</p>
-        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebookで登録</a>
-        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitterで登録</a>
-      </div>
-    </div>
-  </div>
-  <div class="lesson-wrapper">
-    <div class="container">
-      <div class="heading">
-        <h2>Learn Where to Get Started!</h2>
-      </div>
-      <div class="lessons">
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/html.png">
-            <p>HTML & CSS</p>
-          </div>
-          <p class="text-contents">ウェブページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/jQuery.png">
-            <p>jQuery</p>
-          </div>
-          <p class="text-contents">素敵な動きを手軽に実装できるJavaScriptライブラリです。 アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりと色々なことができます。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/ruby.png">
-            <p>Ruby</p>
-          </div>
-          <p class="text-contents">オープンソースの動的なプログラミング言語で、 シンプルさと高い生産性を備えています。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/php.png">
-            <p>PHP</p>
-          </div>
-          <p class="text-contents">HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。</p>
-        </div>
-      </div>
-      <div class="clear"></div>
-    </div>
-  </div>
-  <div class="message-wrapper">
-    <div class="container">
-      <div class="heading">
-        <h2>さぁ、あなたもProgateでプログラミングを学んでみませんか?</h2>
-        <h3>Let's learn to code, learn to be creative!</h3>
-      </div>
-      <span class="btn message">さっそく開発する</span>
-    </div>
-  </div>
-  <footer>
-    <div class="container">
-      <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
-      <p>Learn to Code, Learn to be Creative.</p>
-    </div>
-  </footer>
-</body>
-</html>
+@charset "UTF-8";
+
+html{
+    font-size: 100%;
+    max-width:100%;
+}
+
+body {
+
+    color: #383e45;
+    font-size: 0.9rem;
+    font-family: 'Raleway', sans-serif;
+
+}
+
+
+
+a{
+    text-decoration: none;
+}
+
+img{
+    max-width: 100%;  
+}
+
+li{
+    list-style: none;
+}
+header{
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#header-wrapper{
+    width: 100%;
+    border-bottom: solid 1px #c3c3c3;
+    margin-bottom: 50px;
+    padding-bottom: 26px;
+
+}
+
+#header-logo{
+    margin: 36px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+#menu{
+    margin: 0 100px;
+    display: flex;
+    justify-content: space-between;
+
+    
+}
+
+#menu img{
+    width: 20px;
+
+}
+.header-link{
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+
+}
+
+#header-contents a{
+    margin-right: 14px;
+    color: #383e45;
+}
+
+#header-operation a{
+    margin-left: 14px;
+    color: #383e45;
+
+}
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+
+
+main img{
+    width: 100%;
+    margin-bottom: 50px;
+}
+
+#top{
+    position: relative;
+}
+main h1{
+    background-color:#c8c8c8;
+    opacity: 0.8;
+    color:black;
+    padding: 30px;
+    font-size: 3rem;
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
+
+main form{
+    max-width: 600px;
+}
+#shop{
+    margin-bottom: 50px;
+}
+
+main dl{
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+main dt{
+    width: 15%;
+    display: flex;
+    flex-direction: column;
+}
+
+main dd{
+
+    width: 85%;
+    margin-bottom: 10px;
+
+}
+
+main dd input,
+main dd textarea {
+  width: 100%;
+  border: solid 1px #c8c8c8;
+  padding: 10px;
+
+
+}
+
+
+#form .button input {
+    display: block;
+    margin: 0 auto;
+    width: 200px;
+    background-color: #24292e;
+    color: #fff;
+    padding: 15px 0;
+    border: solid 1px #24292e;
+  }
+
+#form .button input:hover {
+    background: #fff;
+    color: #24292e;
+  }
+
+
+footer {
+    padding: 10px ;
+}
+
+footer .copyright {
+    font-size: 0.625rem;
+    text-align: center;
+  }
